--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ body {
   border: 4px solid #f97247;
   border-radius: 64px;
 }
-.mobile__nav {
+.mobile-nav {
   display: none;
 }
 .nav__menu {
